Fix navbar overlapping content; add role attribute

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,6 +4,7 @@
 body {
   text-align: center;
   color: #222;
+  padding-top: 70px;
 }
 
 nav .navbar-brand {
